--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-    "name": "ludum41",
-    "private": true,
-    "version": "0.0.0",
-    "scripts": {
-        "start": "concurrently \"tsc -p game/tsconfig.json --watch\" serve",
-        "build": "tsc -p game/tsconfig.json",
-        "copy": "copy lib/excalibur/build/dist/**/* lib/excalibur-dist"
-    },
-    "devDependencies": {
-        "concurrently": "^3.5.1",
-        "copy": "^0.3.1",
-        "serve": "^6.5.5",
-        "typescript": "2.8.1"
-    }
+  "name": "ludum41",
+  "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "start": "concurrently \"tsc -p game/tsconfig.json --watch\" serve",
+    "build": "tsc -p game/tsconfig.json",
+    "copy": "copy lib/excalibur/build/dist/**/* lib/excalibur-dist",
+    "pretty": "prettier --write game/**",
+    "precommit": "pretty-quick --staged"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.1",
+    "copy": "^0.3.1",
+    "husky": "^0.14.3",
+    "prettier": "^1.12.1",
+    "pretty-quick": "^1.4.1",
+    "serve": "^6.5.5",
+    "typescript": "2.8.1"
+  }
 }
